# cmake-zad-sime1997-1

./: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt  mtest.cpp
